--- a/fa/css/usecase.css
+++ b/fa/css/usecase.css
@@ -108,6 +108,7 @@
   content: '\f35d';
   font-weight: 900;
   margin-right: 4px;
+  margin-left: 4px;
 }
 
 /*** WorksDetail ***/
@@ -125,7 +126,7 @@
 /*** WorksIntro ***/
 .usecase_WorksIntro_Container {
   width: 100%;
-  padding-right: 15px;
+  padding-left: 15px;
 }
 .usecase_WorksIntro_ImageGrid {
   display: flex;
@@ -138,10 +139,10 @@
   width: var(--width, 50%);
 }
 .usecase_WorksIntro_ImageCell:first-child {
-  padding-right: 5px;
+  padding-left: 5px;
 }
 .usecase_WorksIntro_ImageCell:nth-child(2) {
-  padding-left: 5px;
+  padding-right: 5px;
 }
 .usecase_WorksIntro_Image {
   width: 100%;
@@ -191,7 +192,7 @@
   -ms-grid-column: 2;
   -ms-grid-row: 1;
   width: 100%;
-  padding-left: 10px;
+  padding-right: 10px;
 
 }
 
